# MasterThesis_LLM_optimization_ORCA

./: .gitignore  README.md  data_analysis.ipynb  evaluation.md  evaluation_1.5b.md  evaluation_32b.md  evaluation_70b.md  evaluation_8b.md  evaluation_results.jsonl  main.py  pyproject.toml  test.md  tree.txt
.github/workflows/: action.yml
artifact/: LLM_mapper.py  ORCA_LLM_mapper.py  pyproject.toml
artifact/data/input/: capecs_for_RAG.pk1  threat_data_for_RAG.pk1  threat_data_for_RAGv2.pk1
capec_data/: capec_data_for_PE.json  capec_data_for_PE.pk1  capecs.csv  capecs_for_rag.pk1  capecs_with_embeddings.pk1
data/: all_threats.json
experiments/: data_analysis.ipynb
experiments/capec_data/: capecs.pk1  capecs_with_embeddings.pk1
experiments/mapped_data/: all_t2c_mappings.pk1  hfc_general_threats_capec_mapping_min0.55.csv  merged_orca_our_similarities.csv
experiments/threat_data/: threat_data_for_PE.pk1  threats_after_data_understanding.pk1  threats_with_embeddings.pk1
mapped_data/: ORCA_mappings_min0.55.csv  all_t2c_mappings.pk1  few_shot_examples.pkl  hfc_general_threats_capec_mapping_min0.55.csv  lora_training_data.jsonl  merged_mappings_above_055_df.pk1  merged_orca_our_similarities.csv
results/: evaluation.md  evaluation_results.jsonl  evaluation_v2.md
threat_data/: threat_data_for_PE.pk1  threat_data_for_RAG.pk1
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
uv/: pyproject.toml
wandb/: latest-run
wandb/run-20250730_100140-wyj0p6x6/: run-wyj0p6x6.wandb
(+4 files in other folders)
