[project]
name = "masterthesis-llm-optimization-orca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "git-python>=1.0.3",
    "google-genai>=1.24.0",
    "google-generativeai>=0.8.5",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "stix2>=3.0.1",
]
