[project]
name = "masterthesis-llm-optimization-orca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.0",
    "chromadb>=1.0.15",
    "comm>=0.2.2",
    "git-python>=1.0.3",
    "google-genai>=1.24.0",
    "google-generativeai>=0.8.5",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "stix2>=3.0.1",
]

[tool.setuptools.packages.find]
include = ["masterthesis_llm_optimization_orca"] 