[project]
name = "masterthesis-llm-optimization-orca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.0",
    "chromadb>=1.0.15",
    "comm>=0.2.2",
    "git-python>=1.0.3",
    "google-genai>=1.24.0",
    "google-generativeai>=0.8.5",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "ollama>=0.5.3",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "stix2>=3.0.1",
    "unsloth",
    "wandb>=0.21.0",
    "sentencepiece>=0.2.1",
    "ipykernel>=6.30.1",
    "openai>=1.107.1",
]

[tool.setuptools.packages.find]
include = ["masterthesis_llm_optimization_orca"] 

[tool.uv.workspace]
members = [
    "artifact",
]
